RESOLVED FIXED246662
AX: AXPropertyName::CurrentState is not updated after dynamic aria-current changes
https://bugs.webkit.org/show_bug.cgi?id=246662
Summary AX: AXPropertyName::CurrentState is not updated after dynamic aria-current ch...
Tyler Wilcock
Reported 2022-10-17 17:20:30 PDT
AXPropertyName::CurrentState is not updated after dynamic aria-current changes
Attachments
Patch (12.88 KB, patch)
2022-10-17 17:28 PDT, Tyler Wilcock
no flags
Patch (13.25 KB, patch)
2022-10-18 10:16 PDT, Tyler Wilcock
no flags
Patch (14.54 KB, patch)
2022-10-18 20:24 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-10-17 17:20:44 PDT
Tyler Wilcock
Comment 2 2022-10-17 17:28:47 PDT
Tyler Wilcock
Comment 3 2022-10-18 10:16:27 PDT
Tyler Wilcock
Comment 4 2022-10-18 20:24:07 PDT
EWS
Comment 5 2022-10-19 10:14:34 PDT
Committed 255742@main (80e097afe06f): <https://commits.webkit.org/255742@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 463073 [details].
Note You need to log in before you can comment on or make changes to this bug.