Source/WebCore/accessibility/AccessibilityObjectInterface.h
@@ -1065,8 +1065,8 @@ public:
     virtual String linkRelValue() const = 0;
     virtual Vector<String> classList() const = 0;
     virtual AccessibilityCurrentState currentState() const = 0;
-    virtual String currentValue() const = 0;
     virtual bool supportsCurrent() const = 0;
+    String currentValue() const;
     virtual const String keyShortcutsValue() const = 0;
 
     virtual bool isModalNode() const = 0;
@@ -1438,6 +1438,27 @@ inline Vector<AXID> axIDs(const AXCoreObject::AccessibilityChildrenVector& objec
     return objects.map([] (const auto& object) {
         return object ? object->objectID() : AXID();
     });
+}
+
+inline String AXCoreObject::currentValue() const
+{
+    switch (currentState()) {
+    case AccessibilityCurrentState::False:
+        return "false"_s;
+    case AccessibilityCurrentState::Page:
+        return "page"_s;
+    case AccessibilityCurrentState::Step:
+        return "step"_s;
+    case AccessibilityCurrentState::Location:
+        return "location"_s;
+    case AccessibilityCurrentState::Time:
+        return "time"_s;
+    case AccessibilityCurrentState::Date:
+        return "date"_s;
+    default:
+    case AccessibilityCurrentState::True:
+        return "true"_s;
+    }
 }
 
 inline AXCoreObject::AXValue AXCoreObject::value()
